python/as/interface/fuck
Traceback (most recent call last):
  File "/home/lx/Udesc/BAN2/python/as/interface/masterMind.py", line 198, in insertPericia
    self.insert(c,tabelas,what)
  File "/home/lx/Udesc/BAN2/python/as/interface/banco.py", line 208, in insert
    c.execute("insert into %s values %s;"%(tabelas,what))
  File "/usr/lib/python2.7/site-packages/MySQLdb/cursors.py", line 205, in execute
    self.errorhandler(self, exc, value)
  File "/usr/lib/python2.7/site-packages/MySQLdb/connections.py", line 36, in defaulterrorhandler
    raise errorclass, errorvalue
_mysql_exceptions.ProgrammingError: (1064, "You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near ')' at line 1")
Traceback (most recent call last):
  File "/home/lx/Udesc/BAN2/python/as/interface/masterMind.py", line 198, in insertPericia
    self.insert(c,tabelas,what)
  File "/home/lx/Udesc/BAN2/python/as/interface/banco.py", line 208, in insert
    c.execute("insert into %s values %s;"%(tabelas,what))
  File "/usr/lib/python2.7/site-packages/MySQLdb/cursors.py", line 205, in execute
    self.errorhandler(self, exc, value)
  File "/usr/lib/python2.7/site-packages/MySQLdb/connections.py", line 36, in defaulterrorhandler
    raise errorclass, errorvalue
_mysql_exceptions.IntegrityError: (1452, 'Cannot add or update a child row: a foreign key constraint fails (`testepy`.`pericia`, CONSTRAINT `pericia_ibfk_1` FOREIGN KEY (`num_matricula_pericia`) REFERENCES `funcionarios` (`num_matricula_funcionarios`))')
Traceback (most recent call last):
  File "./main.py", line 2, in <module>
    from masterMind import *
  File "/home/lx/Udesc/BAN2/python/as/interface/masterMind.py", line 6, in <module>
    from banco import *
  File "/home/lx/Udesc/BAN2/python/as/interface/banco.py", line 215
    def removeDaTabela(self,c,tabelas,what):
    ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "./main.py", line 2, in <module>
    from masterMind import *
  File "/home/lx/Udesc/BAN2/python/as/interface/masterMind.py", line 6, in <module>
    from banco import *
  File "/home/lx/Udesc/BAN2/python/as/interface/banco.py", line 215
    def removeDaTabela(self,c,tabelas,what):
    ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "./main.py", line 2, in <module>
    from masterMind import *
  File "/home/lx/Udesc/BAN2/python/as/interface/masterMind.py", line 6, in <module>
    from banco import *
  File "/home/lx/Udesc/BAN2/python/as/interface/banco.py", line 215
    def removeDaTabela(self,c,tabelas,what):
    ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/home/lx/Udesc/BAN2/python/as/interface/masterMind.py", line 198, in insertPericia
    self.insert(c,tabelas,what)
  File "/home/lx/Udesc/BAN2/python/as/interface/banco.py", line 209, in insert
    c.execute("insert into %s values %s;"%(tabelas,what))
  File "/usr/lib/python2.7/site-packages/MySQLdb/cursors.py", line 205, in execute
    self.errorhandler(self, exc, value)
  File "/usr/lib/python2.7/site-packages/MySQLdb/connections.py", line 36, in defaulterrorhandler
    raise errorclass, errorvalue
_mysql_exceptions.IntegrityError: (1452, 'Cannot add or update a child row: a foreign key constraint fails (`testepy`.`pericia`, CONSTRAINT `pericia_ibfk_1` FOREIGN KEY (`num_matricula_pericia`) REFERENCES `funcionarios` (`num_matricula_funcionarios`))')
